--- a/index.html
+++ b/index.html
@@ -135,28 +135,30 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-book"></i></span>
+                <a href="" target="_blank"><span class="ico-circle"><i class="bi bi-book"></i></span></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title"> MASTER DEGREE </h2>
                 <h4 class="s-description"> Software Engineering and IT Management </h4>
                 <h6 class="s-description"> University of Salerno Set 2021 - Now </h6>
+                <!--
                 <p class="s-description text-center">
                   <b>Thesis's title:</b>
                 </p>
-                <p class="s-description text-center">
-                  <b>Advisor:</b>
-                </p>
-                <p class="s-description text-center">
-                  <b>Grade:</b>
-                </p>
+
+                -->
+                <a href="" target="_blank">
+                  <p class="s-description text-center">
+                    <b><u>More info</u></b>
+                  </p>
+                </a>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-book"></i></span>
+                <a href="assets/pdf/Tesi.pdf" target="_blank"><span class="ico-circle"><i class="bi bi-book"></i></span></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title"> BACHELOR DEGREE </h2>
@@ -166,12 +168,11 @@
                   <b>Thesis's title:</b> "Identification of molecular biomarkers to improve
                   diagnosing and monitoring the progression of Parkinson's"
                 </p>
-                <p class="s-description text-center">
-                  <b>Advisor:</b> Prof. Risi Michele
-                </p>
-                <p class="s-description text-center">
-                  <b>Grade:</b> 105/110
-                </p>
+                <a href="assets/pdf/Tesi.pdf" target="_blank">
+                  <p class="s-description text-center">
+                    <b><u>More info</u></b>
+                  </p>
+                </a>
               </div>
             </div>
           </div>
@@ -527,7 +528,7 @@
                         <li><span class="bi bi-phone"></span>     <a> (+39) 389 187 2977</a></li>
                         <li><span class="bi bi-envelope"></span>  <a> gerardoiuliano99@gmail.com</a></li>
                         <li><span class="bi bi-github"></span>    <a href="https://github.com/GerardoIuliano"> GerardoIuliano </a></li>
-                        <li><span class="bi bi-linkedin"></span> <a href="https://www.linkedin.com/in/gerardo-iuliano/"> Gerardo Iuliano </a></li>
+                        <li><span class="bi bi-linkedin"></span>  <a href="https://www.linkedin.com/in/gerardo-iuliano/"> Gerardo Iuliano </a></li>
                         <li><span class="bi bi-instagram"></span> <a href="https://instagram.com/gerardo__iuliano"> gerardo__iuliano </a></li>
                       </ul>
                     </div>
@@ -539,11 +540,6 @@
         </div>
       </div>
     </section><!-- End Contact Section -->
-    <div style="background-color: #000000; alignment: right">
-     <div id="counter" style="float:right; width: 20px; margin-left: -200px;">
-
-     </div>
-    </div>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -552,9 +548,9 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <div class="credits">
+            <div class="credits" style="font-size: 12px">
               <span>Autorizzo il trattamento dei miei dati personali ai sensi del Decreto Legislativo 30 giugno 2003, n. 196 e del GDPR (Regolamento UE 2016/679).</span>
-              <img style="width: 150px; height: auto; margin-bottom: 14px; margin-left: 20px" src="assets/img/Firma.png">
+              <img style="width: 100px; height: auto; margin-bottom: 14px; margin-left: 20px" src="assets/img/Firma.png">
             </div>
           </div>
         </div>
