--- a/portfolio-compiler.html
+++ b/portfolio-compiler.html
@@ -56,10 +56,11 @@
 
   <div class="hero hero-single route bg-image" style="background-image: url(assets/img/compiler.png);">
     <div class="overlay-mf"></div>
-    <div class="hero-content display-table">
+    <div class="blur"></div>
+    <div class="hero-content display-table ">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Compiler</h2>
+          <h2 class="hero-title mb-4" >Compiler</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="index.html">Home</a>
