--- a/portfolio-sorrentoMarina.html
+++ b/portfolio-sorrentoMarina.html
@@ -56,6 +56,7 @@
 
   <div class="hero hero-single route bg-image" style="background-image: url(assets/img/sorrentoMarina.png);">
     <div class="overlay-mf"></div>
+    <div class="blur"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
